@@ -5,6 +5,7 @@ BUG: Ticket#627 - Logout did not set correct status to the user object (Qiang)
 BUG: Ticket#650 - Fixed TMysqlMetaData bug about SHOW FULL TABLES (Qiang)
 BUG: Ticket#651 - TUserManager Roles names (from config) should be trimmed (Qiang)
 BUG: Ticket#652 - OFFSET must be specified together with LIMIT for TScaffoldView (Qiang)
+BUG: Ticket#653 - TUrlMapping: ServiceId irgnored in URL-Map (Qiang)
 BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
 BUG: Ticket#654 - TAssetManager::copyDirectory() do not run closedir on an invalid resource (Knut)
 BUG: Ticket#655 - TAssetManager::publishTarFile() exception for 'assetmanager_tarchecksum_invalid' is not thrown on BSD systems (Knut)
